// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SheetList /> should not render invalid children 1`] = `
<SheetList
  className={null}
  hasImages={false}
  testId={null}
>
  <List
    className="engage__sheet-list"
    role="listbox"
  >
    <ul
      className="engage__sheet-list common_list"
      role="listbox"
    >
      <ListItem
        className="engage__sheet-list__item sg-1ysoomx-item-itemNotLast"
        isSelected={false}
        key="child-0/.0"
        role={null}
        tabIndex={0}
      >
        <li
          className="engage__sheet-list__item common__list__list-item sg-zqqzk9-item-item-itemNotLast-unselected"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="sg-1cl0k0e-innerContainer"
            data-test-id={null}
          >
            <ForwardRef(WithForwardedRef(Item))
              title="List Item"
            >
              <Item
                className={null}
                description={null}
                forwardedRef={null}
                image={null}
                isDisabled={false}
                isSelected={false}
                leftComponent={null}
                link={null}
                linkComponent={[Function]}
                linkState={null}
                onClick={null}
                rightComponent={null}
                testId={null}
                title="List Item"
              >
                <div
                  className="engage__sheet-list__item"
                  data-test-id={null}
                >
                  <Grid
                    className="sg-oxesat-grid"
                    component="div"
                    wrap={false}
                  >
                    <div
                      className="common__grid sg-1m2nk0b-root-noWrap-grid"
                    >
                      <GridItem
                        className="sg-h6motv-title"
                        component="div"
                        grow={1}
                        shrink={1}
                      >
                        <div
                          className="sg-427d4o-root-title"
                        >
                          <div>
                            List Item
                          </div>
                        </div>
                      </GridItem>
                    </div>
                  </Grid>
                </div>
              </Item>
            </ForwardRef(WithForwardedRef(Item))>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</SheetList>
`;

exports[`<SheetList /> should not render without children 1`] = `
<SheetList
  className={null}
  hasImages={false}
  testId={null}
/>
`;

exports[`<SheetList /> should render a child and add styles for list items with images 1`] = `
<SheetList
  className={null}
  hasImages={true}
  testId={null}
>
  <List
    className="engage__sheet-list"
    role="listbox"
  >
    <ul
      className="engage__sheet-list common_list"
      role="listbox"
    >
      <ListItem
        className="engage__sheet-list__item sg-wjbn21-item-itemWithImage-itemNotLast"
        isSelected={false}
        key="child-0/.0"
        role={null}
        tabIndex={0}
      >
        <li
          className="engage__sheet-list__item common__list__list-item sg-nbvjw8-item-item-itemWithImage-itemNotLast-unselected"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="sg-1cl0k0e-innerContainer"
            data-test-id={null}
          >
            <ForwardRef(WithForwardedRef(Item))
              title="List Item"
            >
              <Item
                className={null}
                description={null}
                forwardedRef={null}
                image={null}
                isDisabled={false}
                isSelected={false}
                leftComponent={null}
                link={null}
                linkComponent={[Function]}
                linkState={null}
                onClick={null}
                rightComponent={null}
                testId={null}
                title="List Item"
              >
                <div
                  className="engage__sheet-list__item"
                  data-test-id={null}
                >
                  <Grid
                    className="sg-oxesat-grid"
                    component="div"
                    wrap={false}
                  >
                    <div
                      className="common__grid sg-1m2nk0b-root-noWrap-grid"
                    >
                      <GridItem
                        className="sg-h6motv-title"
                        component="div"
                        grow={1}
                        shrink={1}
                      >
                        <div
                          className="sg-427d4o-root-title"
                        >
                          <div>
                            List Item
                          </div>
                        </div>
                      </GridItem>
                    </div>
                  </Grid>
                </div>
              </Item>
            </ForwardRef(WithForwardedRef(Item))>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</SheetList>
`;

exports[`<SheetList /> should render with two children 1`] = `
<SheetList
  className={null}
  hasImages={false}
  testId={null}
>
  <List
    className="engage__sheet-list"
    role="listbox"
  >
    <ul
      className="engage__sheet-list common_list"
      role="listbox"
    >
      <ListItem
        className="engage__sheet-list__item sg-1ysoomx-item-itemNotLast"
        isSelected={false}
        key="child-0/.0"
        role={null}
        tabIndex={0}
      >
        <li
          className="engage__sheet-list__item common__list__list-item sg-zqqzk9-item-item-itemNotLast-unselected"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="sg-1cl0k0e-innerContainer"
            data-test-id={null}
          >
            <ForwardRef(WithForwardedRef(Item))
              title="List Item"
            >
              <Item
                className={null}
                description={null}
                forwardedRef={null}
                image={null}
                isDisabled={false}
                isSelected={false}
                leftComponent={null}
                link={null}
                linkComponent={[Function]}
                linkState={null}
                onClick={null}
                rightComponent={null}
                testId={null}
                title="List Item"
              >
                <div
                  className="engage__sheet-list__item"
                  data-test-id={null}
                >
                  <Grid
                    className="sg-oxesat-grid"
                    component="div"
                    wrap={false}
                  >
                    <div
                      className="common__grid sg-1m2nk0b-root-noWrap-grid"
                    >
                      <GridItem
                        className="sg-h6motv-title"
                        component="div"
                        grow={1}
                        shrink={1}
                      >
                        <div
                          className="sg-427d4o-root-title"
                        >
                          <div>
                            List Item
                          </div>
                        </div>
                      </GridItem>
                    </div>
                  </Grid>
                </div>
              </Item>
            </ForwardRef(WithForwardedRef(Item))>
          </div>
        </li>
      </ListItem>
      <ListItem
        className="engage__sheet-list__item sg-1ysoomx-item-itemNotLast"
        isSelected={false}
        key="child-1/.1"
        role={null}
        tabIndex={0}
      >
        <li
          className="engage__sheet-list__item common__list__list-item sg-zqqzk9-item-item-itemNotLast-unselected"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="sg-1cl0k0e-innerContainer"
            data-test-id={null}
          >
            <ForwardRef(WithForwardedRef(Item))
              title="List Item"
            >
              <Item
                className={null}
                description={null}
                forwardedRef={null}
                image={null}
                isDisabled={false}
                isSelected={false}
                leftComponent={null}
                link={null}
                linkComponent={[Function]}
                linkState={null}
                onClick={null}
                rightComponent={null}
                testId={null}
                title="List Item"
              >
                <div
                  className="engage__sheet-list__item"
                  data-test-id={null}
                >
                  <Grid
                    className="sg-oxesat-grid"
                    component="div"
                    wrap={false}
                  >
                    <div
                      className="common__grid sg-1m2nk0b-root-noWrap-grid"
                    >
                      <GridItem
                        className="sg-h6motv-title"
                        component="div"
                        grow={1}
                        shrink={1}
                      >
                        <div
                          className="sg-427d4o-root-title"
                        >
                          <div>
                            List Item
                          </div>
                        </div>
                      </GridItem>
                    </div>
                  </Grid>
                </div>
              </Item>
            </ForwardRef(WithForwardedRef(Item))>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</SheetList>
`;
